# cubelib

./: .gitignore  Cargo.toml  README.MD
.cargo/: config.toml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: controller.rs  db.rs  main.rs
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: cache.rs  cli.rs  config.rs  main.rs  steps.pest  steps.rs  update.rs
cli/tests/: integration_test.rs  length_tests.csv
cubelib/: Cargo.toml
cubelib/.cargo/: config.toml
cubelib/examples/: solve_cube.rs  solve_parallel.rs  solve_single_step.rs
cubelib/src/: algs.rs  alignment.rs  avx2_cubie.rs  co.rs  cube.rs  cubie.rs  defs.rs  df_search.rs  lib.rs  lookup_table.rs  main.rs  simd_util.rs  solution.rs  solver.rs  stream.rs  tables.rs  wasm32_cubie.rs  wasm_util.rs
cubelib/src/coords/: dr.rs  eo.rs  finish.rs  fr.rs  htr.rs
cubelib/src/cube/: cube.rs  cube_corners.rs  cube_edges.rs  mod.rs  turn.rs
cubelib/src/puzzles/: mod.rs  puzzle.rs
cubelib/src/puzzles/c222/: coords.rs  mod.rs  steps.rs
cubelib/src/puzzles/c333/: cube.rs  mod.rs  util.rs
cubelib/src/puzzles/c333/steps/: mod.rs  solver.rs  tables.rs
cubelib/src/puzzles/c333/steps/dr/: coords.rs  dr_config.rs  dr_trigger_config.rs  rzp_config.rs
cubelib/src/puzzles/c333/steps/eo/: coords.rs  eo_config.rs
cubelib/src/puzzles/c333/steps/finish/: coords.rs  finish_config.rs
cubelib/src/puzzles/c333/steps/fr/: coords.rs  fr_config.rs
cubelib/src/puzzles/c333/steps/htr/: coords.rs  htr_config.rs  mod.rs  subsets.rs  util.rs
cubelib/src/puzzles/cube/: center_edges.rs  coords.rs  corners.rs  corners_even.rs  corners_odd.rs  cube_corners.rs  cube_edges.rs  mod.rs  odd.rs
cubelib/src/puzzles/pyraminx/: coords.rs  mod.rs  pyraminx.rs  steps.rs
cubelib/src/solver/: df_search.rs  lookup_table.rs  mod.rs  move_table.rs  moveset.rs  solution.rs  stream.rs
cubelib/src/solver_new/: ar.rs  dr.rs  dr_subset.rs  eo.rs  finish.rs  fr.rs  group.rs  htr.rs  mod.rs  step.rs  step.rs~  thread_util.rs  util_cube.rs  util_steps.rs  vr.rs
cubelib/src/steps/: coord.rs  dr.rs  dr_trigger.rs  eo.rs  finish.rs  fr.rs  htr.rs  mod.rs  rzp.rs  solver.rs  step.rs  tables.rs  util.rs
cubelib/src/steps/dr/: co.rs  coords.rs  dr_config.rs  dr_trigger_config.rs  mod.rs  rzp_config.rs
cubelib/src/steps/eo/: coords.rs  eo_config.rs  mod.rs
cubelib/src/steps/finish/: coords.rs  finish_config.rs  mod.rs
cubelib/src/steps/fr/: coords.rs  fr_config.rs  mod.rs
cubelib/src/steps/htr/: coords.rs  htr_config.rs  mod.rs  subsets.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html
frontend/.cargo/: config.toml
frontend/scss/: cube.scss  layout.scss  style.scss
frontend/src/: cube.rs  lib.rs  main.rs  solution.rs  step.rs  util.rs
frontend/src/components/: algorithm.rs  cube.rs  min_max.rs  mod.rs  niss.rs  steps.rs  util.rs  variants.rs
frontend/src/js/: slider.js
interface/: Cargo.toml
interface/src/: lib.rs
solver/: Cargo.toml
solver/src/: cli.rs  main.rs  solver.rs
src/: algs.rs  alignment.rs  avx2_coord.rs  avx2_cubie.rs  cli.rs  co.rs  coord.rs  cube.rs  cubie.rs  cubie256.rs  df_search.rs  dr.rs  eo.rs  fr.rs  htr.rs  lib.rs  lookup_table.rs  main.rs  moveset.rs  step.rs  stream.rs  tables.rs  wasm32_cubie.rs  wasm_cubie.rs
src/coords/: coord.rs  dr.rs  finish.rs  fr.rs  mod.rs
src/steps/: dr.rs  dr_trigger.rs  eo.rs  finish.rs  fr.rs  htr.rs  mod.rs  rzp.rs  step.rs
