[package]
name = "cubelib-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-web-lab = "0.20.1" #ndjson
futures = "0.3.29"
cubelib = { path = "../cubelib", features = ["serde_support", "333finish"] }
cubelib-interface = { path = "../interface" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
actix-cors = "0.6.4"
log = "0.4.20"
simple_logger = "4.2.0"
rand = { version = "0.8.5", features = [] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = { version = "0.29", features = ["bundled"]}
base64 = "0.21.5"