[package]
name = "cubelib-cli"
version = "1.4.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
log = "0.4.20"
simple_logger = "4.2.0"
clap = { version = "4.3.15", features = ["derive"] }
regex = "1.9.5"
cubelib = { path = "../cubelib", features = ["serde_support", "fs"]}
serde = { version = "^1.0.188", features = ["derive"] }

rand = "0.9.0-alpha.1"

[dev-dependencies]
csv = "1.3.0"

[features]
default = ["finish"]
eo = ["cubelib/333eo"]
dr = ["eo", "cubelib/333dr"]
htr = ["dr", "cubelib/333htr"]
fr = ["htr", "cubelib/333fr"]
finish = ["fr", "cubelib/333finish"]

[profile.release]
debug = 1