[package]
name = "cubelib-cli"
version = "2.4.3"
edition = "2021"

[dependencies]
log = "0.4.20"
simple_logger = "5.0.0"
clap = { version = "4.3.15", features = ["derive"] }
regex = "1.9.5"
cubelib = { path = "../cubelib", features = ["serde_support", "fs"]}
serde = { version = "^1.0.188", features = ["derive"] }

rand = "0.9.0"
pest = "2.8.0"
pest_derive = "2.8.0"
toml = "0.9.5"
serde_with = "3.12.0"
home = "0.5.11"
reqwest = { version = "0.12.22", features = ["blocking", "deflate", "gzip", "zstd", "json", "rustls-tls"], default-features = false }
indicatif = "0.18.0"
semver = "1.0.26"
tempfile = "3.20.0"
self-replace = "1.5.0"
zip = "4.3.0"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
csv = "1.3.1"

[features]
default = ["finish", "cubelib/multi-path-channel-solver"]
eo = ["cubelib/333eo"]
dr = ["eo", "cubelib/333dr"]
htr = ["dr", "cubelib/333htr"]
fr = ["htr", "cubelib/333fr"]
finish = ["fr", "cubelib/333finish"]
