[package]
name = "cubelib"
version = "1.4.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_debug"] }
simple_logger = "5.0.0"
serde = { version = "^1.0.188", optional = true, features = ["derive"] }
rand = "0.9.0-alpha.1"
num-traits = "0.2"
num-derive = "0.4"
home = { version = "0.5.9", optional = true }
tinyset = "0.5.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
solver = []
cubic = []
cubic-odd = ["cubic"]

333 = ["cubic-odd"]
333eo = ["333", "solver"]
333dr = ["333eo"]
333htr = ["333dr"]
333fr = ["333htr"]
333finish = ["333fr"]

serde_support = ["dep:serde"]
fs = ["dep:home"]
