[package]
name = "cubelib"
version = "2.0.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_trace"] }
simple_logger = "5.0.0"
serde = { version = "^1.0.188", optional = true, features = ["derive"] }
num-traits = "0.2"
num-derive = "0.4"
home = { version = "0.5.9", optional = true }
tinyset = "0.5.1"
serde_with = { version = "3.12.0", optional = true }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.9.0" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["fs", "333finish", "solver", "multi-path-channel-solver"]
solver = []
multi-path-channel-solver = ["solver", "333finish"]

333eo = ["solver"]
333dr = ["333eo"]
333htr = ["333dr"]
333fr = ["333htr"]
333finish = ["333fr"]

serde_support = ["dep:serde", "dep:serde_with"]
fs = ["dep:home"]
