[package]
name = "cubelib-interface"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
cubelib = { path = "../cubelib", features = ["solver"], default-features = false}